[package]
name = "pytron"
version = "0.2.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
zip = "2.6"
flate2 = "1.1"
ignore = "0.4"
tempfile = "3.19"
dirs = "6.0"
rand = "0.9"
reqwest = { version = "0.11", features = ["blocking"] }
bytes = "1.5"
tar = "0.4"
walkdir = "2.4"

# Windows-specific dependencies
[target.'cfg(windows)'.dependencies]
winreg = "0.52"
